[package]
name = "reviewist"
version = "0.1.0"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies]
chrono = "0.4"
dotenv = "0.11"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.11"
openssl-probe = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio-core = "0.1"
tokio-retry = "0.2"
tokio-timer = "0.2"
url = "1.7"

[dependencies.reqwest]
version = "0.8"
features = ["unstable"]

[dependencies.diesel]
version = "1.0"
features = ["sqlite", "chrono"]

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"

[dependencies.tokio-threadpool]
git = "https://github.com/tokio-rs/tokio"
